--- a/Costo.html
+++ b/Costo.html
@@ -2,307 +2,268 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<title>Costos del Sistema de Captación Pluvial</title>
-
+<title>Costos del Sistema de Captación Pluvial - Actualizado</title>
 <style>
-    body {
-        margin: 0;
-        font-family: Arial, sans-serif;
-        background: linear-gradient(135deg, #3ca7d8, #4dd4ac);
-        min-height: 100vh;
-    }
+body {
+    margin: 0;
+    font-family: 'Poppins', Arial, sans-serif;
+    background: linear-gradient(135deg, #3ca7d8, #4dd4ac);
+    min-height: 100vh;
+}
 
-    /* NAV */
-    .nav-container {
-        background: #ffffffcc;
-        backdrop-filter: blur(10px);
-        display: flex;
-        gap: 15px;
-        padding: 15px;
-        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-        position: sticky;
-        top: 0;
-        z-index: 10;
+/* NAV */
+.nav-container {
+    background: rgba(255, 255, 255, 0.85);
+    backdrop-filter: blur(12px);
+    display: flex;
+    gap: 15px;
+    padding: 18px;
+    border-bottom: 2px solid rgba(255,255,255,0.4);
+    box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+    position: sticky;
+    top: 0;
+    z-index: 20;
+    overflow-x: auto;
+    white-space: nowrap;
+}
 
-        /* NUEVO: Scroll horizontal */
-        overflow-x: auto;
-        white-space: nowrap;
-    }
+.nav-button {
+    padding: 12px 20px;
+    background: linear-gradient(135deg, #1e88e5, #1565c0);
+    color: white;
+    text-decoration: none;
+    border-radius: 12px;
+    font-weight: bold;
+    transition: 0.3s ease;
+    box-shadow: 0 3px 8px rgba(0,0,0,0.15);
+}
 
-    /* Ocultar barra de scroll en navegadores compatibles */
-    .nav-container::-webkit-scrollbar {
-        height: 6px;
-    }
-    .nav-container::-webkit-scrollbar-thumb {
-        background: #1e88e5;
-        border-radius: 10px;
-    }
+.nav-button:hover {
+    transform: translateY(-3px);
+    box-shadow: 0 6px 12px rgba(0,0,0,0.2);
+}
 
-    .nav-button {
-        padding: 10px 18px;
-        background: #1e88e5;
-        color: white;
-        text-decoration: none;
-        border-radius: 8px;
-        font-weight: bold;
-        transition: 0.3s;
-        display: inline-block; /* importante para que no salten de línea */
-    }
+/* CONTENIDO */
+section {
+    padding: 50px;
+    max-width: 1200px;
+    margin: auto;
+}
 
-    .nav-button:hover {
-        background: #1565c0;
-    }
+h2 {
+    font-size: 38px;
+    color: #ffffff;
+    text-align: center;
+    margin-bottom: 25px;
+    text-shadow: 0 3px 8px rgba(0,0,0,0.25);
+}
 
-    /* CONTENIDO */
-    section {
-        padding: 40px;
-        max-width: 1100px;
-        margin: auto;
-    }
+.card {
+    background: rgba(255, 255, 255, 0.92);
+    padding: 35px;
+    border-radius: 20px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+    backdrop-filter: blur(6px);
+    margin-bottom: 45px;
+    border: 1px solid rgba(255,255,255,0.65);
+    animation: fadeIn 0.8s ease;
+}
 
-    h2 {
-        font-size: 32px;
-        color: #2c3e50;
-        text-align: center;
-        margin-bottom: 20px;
-    }
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(20px); }
+    to { opacity: 1; transform: translateY(0); }
+}
 
-    h3 {
-        font-size: 26px;
-        color: #34495e;
-    }
+h3 {
+    font-size: 30px;
+    color: #27ae60;
+    text-shadow: 0 2px 5px rgba(0,0,0,0.15);
+}
 
-    h4 {
-        font-size: 20px;
-        color: #34495e;
-        margin-top: 20px;
-    }
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin-top: 20px;
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+}
 
-    p {
-        color: #555;
-        font-size: 17px;
-    }
+thead tr {
+    background: linear-gradient(135deg, #2ecc71, #27ae60);
+}
 
-    table {
-        width: 100%;
-        border-collapse: collapse;
-        margin-top: 10px;
-        border-radius: 10px;
-        overflow: hidden;
-    }
+th, td {
+    padding: 15px 18px;
+    text-align: left;
+    font-size: 17px;
+}
 
-    th, td {
-        padding: 12px;
-        text-align: left;
-    }
+th {
+    color: white;
+    font-size: 18px;
+    letter-spacing: 0.5px;
+}
 
-    th {
-        color: white;
-    }
+tbody tr {
+    background: #ffffff;
+    transition: 0.3s ease;
+}
 
-    /* TARJETAS */
-    .card {
-        background: white;
-        padding: 25px;
-        border-radius: 15px;
-        box-shadow: 0 4px 15px rgba(0,0,0,0.08);
-        margin-bottom: 40px;
-    }
+tbody tr:nth-child(even) {
+    background: #f2f6f5;
+}
 
-    /* TARJETAS FINALES */
-    .precio-card {
-        flex: 1 1 300px;
-        padding: 20px;
-        border-radius: 12px;
-        color: #000;
-    }
+tbody tr:hover {
+    background: #dfeee9;
+    transform: scale(1.01);
+}
 
-    .beneficios {
-        background: #27ae60;
-        color: white;
-        padding: 30px;
-        border-radius: 15px;
-        margin-bottom: 40px;
-    }
-
-    /* RESPONSIVO */
-    @media (max-width: 768px) {
-        .nav-container {
-            gap: 10px;
-        }
-    }
+/* TOTAL */
+tbody tr:last-child {
+    background: #c8e6c9 !important;
+    font-weight: bold;
+    font-size: 19px;
+}
 </style>
-
 </head>
 <body>
 
-<!-- NAVBAR -->
 <div class="nav-container">
     <a href="index.html" class="nav-button">Inicio</a>
-    <a href="Mapa.html" class="nav-button">Panel Interactivo del Sistema</a>
+    <a href="Mapa.html" class="nav-button">Panel Interactivo</a>
     <a href="Diagnostico.html" class="nav-button">Diagnóstico</a>
     <a href="Materiales.html" class="nav-button">Materiales</a>
     <a href="Funcionamiento.html" class="nav-button">Funcionamiento</a>
     <a href="Costo.html" class="nav-button">Costos Estimados</a>
     <a href="Componentes.html" class="nav-button">Componentes</a>
-    <a href="Calculo.html" class="nav-button">Calculo económico</a>
+    <a href="Calculo.html" class="nav-button">Cálculo económico</a>
     <a href="ImpactoA.html" class="nav-button">Impacto Ambiental</a>
 </div>
 
-<!-- CONTENIDO -->
 <section>
 
     <h2>Costos Estimados del Sistema de Captación de Agua Pluvial</h2>
     <p style="text-align:center; max-width:800px; margin:auto;">
-        Análisis económico basado en precios promedio en México. 
-        Los costos varían según proveedores y capacidades.
+        Análisis económico basado en los nuevos costos proporcionados.
     </p>
 
     <hr style="margin: 30px auto; width: 60%; border: 1px solid #dfe6e9;">
 
-    <!-- CARD 1 -->
+    <!-- CARD DE COSTOS REALES -->
     <div class="card">
-        <h3 style="color:#27ae60;">Costos de Materiales Principales</h3>
+        <h3 style="color:#27ae60;">Costos Reales del Proyecto</h3>
 
-        <h4>Tuberías y Canaletas</h4>
         <div style="overflow-x:auto;">
             <table>
                 <thead>
                     <tr style="background:#27ae60;">
-                        <th>Material</th>
-                        <th>Uso</th>
-                        <th>Costo Estimado</th>
+                        <th>MATERIAL</th>
+                        <th>PIEZAS</th>
+                        <th>COSTO INDIVIDUAL</th>
+                        <th>COSTO TOTAL</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>PVC cédula 40</td>
-                        <td>Tuberías principales y bajantes</td>
-                        <td>$80–$150 por metro</td>
-                    </tr>
-                    <tr style="background:#ecf0f1;">
-                        <td>Canaletas de PVC</td>
-                        <td>Captación de agua desde techos</td>
-                        <td>$100–$180 por metro</td>
-                    </tr>
-                    <tr>
-                        <td>Bajantes</td>
-                        <td>Conducción hacia filtros</td>
-                        <td>$120–$200 por metro</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
 
-        <h4>Tanques y Almacenamiento</h4>
-        <div style="overflow-x:auto;">
-            <table>
-                <thead>
-                    <tr style="background:#2980b9;">
-                        <th>Tipo de tanque</th>
-                        <th>Capacidad</th>
-                        <th>Costo</th>
-                    </tr>
-                </thead>
-                <tbody>
                     <tr>
-                        <td>PEAD grado alimenticio</td>
-                        <td>5,000 L</td>
-                        <td>$6,000–$10,000</td>
+                        <td>Canalón</td>
+                        <td>245</td>
+                        <td>$269</td>
+                        <td>$65,905</td>
                     </tr>
-                    <tr style="background:#ecf0f1;">
-                        <td>PEAD técnico</td>
-                        <td>10,000 L</td>
-                        <td>$12,000–$20,000</td>
-                    </tr>
-                    <tr>
-                        <td>Fibra de vidrio</td>
-                        <td>10,000 L</td>
-                        <td>$18,000–$30,000</td>
-                    </tr>
-                    <tr style="background:#ecf0f1;">
-                        <td>Acero inoxidable</td>
-                        <td>5,000 L</td>
-                        <td>$22,000–$40,000</td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
 
-        <h4>Filtros y Tratamiento</h4>
-        <div style="overflow-x:auto;">
-            <table>
-                <thead>
-                    <tr style="background:#8e44ad;">
-                        <th>Filtro</th>
-                        <th>Función</th>
-                        <th>Costo</th>
+                    <tr style="background:#ecf0f1;">
+                        <td>Bajante</td>
+                        <td>81</td>
+                        <td>$469</td>
+                        <td>$37,989</td>
                     </tr>
-                </thead>
-                <tbody>
+
                     <tr>
-                        <td>Malla de polipropileno</td>
-                        <td>Retiene hojas y residuos</td>
-                        <td>$150–$350</td>
+                        <td>Tornillos</td>
+                        <td>2152</td>
+                        <td>$1.85</td>
+                        <td>$3,981</td>
                     </tr>
+
+                    <tr style="background:#ecf0f1;">
+                        <td>Cisterna (25,000 L)</td>
+                        <td>1</td>
+                        <td>$119,099</td>
+                        <td>$119,099</td>
+                    </tr>
+
+                    <tr>
+                        <td>Filtro primario / secundario</td>
+                        <td>2</td>
+                        <td>$495</td>
+                        <td>$990</td>
+                    </tr>
+
+                    <tr style="background:#ecf0f1;">
+                        <td>Bomba eléctrica sumergible IUSA</td>
+                        <td>1</td>
+                        <td>$1,789</td>
+                        <td>$1,789</td>
+                    </tr>
+
+                    <tr>
+                        <td>Válvula de esfera 1 1/2" PCP</td>
+                        <td>1</td>
+                        <td>$93</td>
+                        <td>$93</td>
+                    </tr>
+
+                    <tr style="background:#ecf0f1;">
+                        <td>Válvula check anti-retorno PVC 110 mm</td>
+                        <td>1</td>
+                        <td>$750</td>
+                        <td>$750</td>
+                    </tr>
+
+                    <tr>
+                        <td>Tubo PVC sanitario 3 m</td>
+                        <td>1</td>
+                        <td>$79</td>
+                        <td>$79</td>
+                    </tr>
+
                     <tr style="background:#ecf0f1;">
                         <td>Carbón activado</td>
-                        <td>Elimina olor/color</td>
-                        <td>$300–$700</td>
+                        <td>30 kg</td>
+                        <td>$150</td>
+                        <td>$4,500</td>
                     </tr>
+
                     <tr>
-                        <td>Trampa de sólidos</td>
-                        <td>Elimina impurezas iniciales</td>
-                        <td>$600–$1,500</td>
+                        <td>Hipoclorito de sodio</td>
+                        <td>1 L</td>
+                        <td>$14</td>
+                        <td>$14</td>
                     </tr>
+
                     <tr style="background:#ecf0f1;">
-                        <td>Bomba de agua</td>
-                        <td>Impulsar agua</td>
-                        <td>$1,200–$4,000</td>
+                        <td>Costes secundarios (insumos)</td>
+                        <td>-</td>
+                        <td>$2,500</td>
+                        <td>$2,500</td>
                     </tr>
+
+                    <!-- TOTAL -->
+                    <tr style="background:#dcdde1; font-weight:bold;">
+                        <td>Total</td>
+                        <td></td>
+                        <td></td>
+                        <td>$237,689</td>
+                    </tr>
+
                 </tbody>
             </table>
         </div>
-    </div>
-
-    <!-- CARD 2 -->
-    <div class="card">
-        <h3>Costo Total Estimado del Proyecto</h3>
-
-        <div style="display:flex; flex-wrap:wrap; gap:20px; justify-content:center;">
-
-            <div class="precio-card" style="background:#ecf0f1; border-left:6px solid #27ae60;">
-                <h4 style="color:#27ae60;">Alternativa Económica</h4>
-                <p>Sistema básico con tanque de 5,000 L.</p>
-                <p style="font-weight:bold;">$25,000 – $45,000 MXN</p>
-            </div>
-
-            <div class="precio-card" style="background:#e8f6ff; border-left:6px solid #2980b9;">
-                <h4 style="color:#2980b9;">Alternativa Intermedia (Recomendada)</h4>
-                <p>Sistema completo con filtros y tanque de 10,000 L.</p>
-                <p style="font-weight:bold;">$60,000 – $90,000 MXN</p>
-            </div>
-
-            <div class="precio-card" style="background:#f9eaff; border-left:6px solid #8e44ad;">
-                <h4 style="color:#8e44ad;">Alternativa Premium</h4>
-                <p>Sistema automatizado y acero inoxidable.</p>
-                <p style="font-weight:bold;">$120,000 – $200,000 MXN</p>
-            </div>
-
-        </div>
-    </div>
-
-    <!-- BENEFICIOS -->
-    <div class="beneficios">
-        <h3>Beneficios Económicos</h3>
-        <ul style="font-size:18px; line-height:1.7;">
-            <li>Ahorro de agua potable del 30% al 40%.</li>
-            <li>Ahorro anual: <strong>$10,000 – $25,000 MXN</strong>.</li>
-            <li>Retorno de inversión: <strong>2 a 4 años</strong>.</li>
-        </ul>
     </div>
 
 </section>
-
 </body>
 </html>
+
